<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>flight_mode_test</name>
  <version>0.11.2</version>
  <description>Example Flight Mode</description>
  <license>BSD 3 clause</license>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>px4_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
